<resources>
    <string name="app_name">Free Music</string>
    <string name="title_home">Home</string>
    <string name="title_my_music">My music</string>
    <string name="title_more">More</string>
    <string name="title_genres">Genres</string>
    <string name="title_search">Search</string>
    <string name="title_hot_keys">Hot keys</string>
    <string name="title_clear">Clear</string>
    <string name="title_history">History</string>
    <string name="title_timer">Timer</string>
    <string name="title_local">Local</string>
    <string name="title_download">Download</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_playlist">Playlist</string>
    <string name="title_create_playlist">Create Playlist</string>
    <string name="title_ok">OK</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_select_playlist">Select playlist</string>
    <string name="hint_timer">Input minutes</string>
    <string name="hint_search_track">Key word</string>
    <string name="hint_search">Search for songs…</string>
    <string name="msg_timer_pause">Player will pause after </string>
    <string name="msg_minutes"> minutes</string>
    <string name="msg_success_add_track_to_playlist">Track added to playlist!</string>
    <string name="msg_failed_add_track_to_playlist">Failed add track to playlist!</string>
    <string name="msg_permissions">You need permission write storage</string>
    <string name="msg_retry">Retry</string>
    <string name="msg_content">Content</string>
    <string name="msg_sending_mail">Send mail…</string>
    <string name="msg_no_client_mail">There is no email client installed.</string>
    <string name="text_sample_number">1</string>
    <string name="title_information">Information</string>
    <string name="title_version">Version</string>
    <string name="title_version_app">1.0.5</string>
    <string name="title_report"><![CDATA[Report & Feedback]]></string>
    <string name="title_rate_me">Rate me</string>
    <string name="title_setting">Setting</string>
    <string name="title_theme">Theme</string>
    <string name="title_language">Language</string>
    <string name="title_notification">Notification</string>
</resources>
