<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view_search"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_grey_300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:clickable="false"
        android:padding="@dimen/dp_13"
        android:src="@drawable/ic_search_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_search"
        app:layout_constraintStart_toStartOf="@+id/view_search"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:text="@string/hint_search"
        app:layout_constraintBottom_toBottomOf="@+id/view_search"
        app:layout_constraintEnd_toStartOf="@+id/button_search_voice"
        app:layout_constraintStart_toEndOf="@+id/button_search"
        app:layout_constraintTop_toTopOf="@+id/view_search" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/button_search_voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:padding="@dimen/dp_13"
        android:src="@drawable/ic_keyboard_voice_black_transparent_80_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_search"
        app:layout_constraintEnd_toEndOf="@+id/view_search"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_title_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/title_information"
        android:textAllCaps="true"
        android:textColor="@color/color_transparent_80"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_search" />

    <ImageButton
        android:id="@+id/button_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/bg_circle"
        android:padding="@dimen/dp_8"
        android:src="@drawable/ic_info_outline_black_24dp"
        android:tint="@color/color_accent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_info" />

    <TextView
        android:id="@+id/text_title_version"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:padding="@dimen/dp_8"
        android:text="@string/title_version"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/button_version"
        app:layout_constraintEnd_toStartOf="@+id/text_version"
        app:layout_constraintStart_toEndOf="@+id/button_version"
        app:layout_constraintTop_toTopOf="@+id/button_version" />

    <TextView
        android:id="@+id/text_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:padding="@dimen/dp_8"
        android:text="@string/title_version_app"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/text_title_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_title_version" />

    <ImageButton
        android:id="@+id/button_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/bg_circle"
        android:padding="@dimen/dp_8"
        android:src="@drawable/ic_mail_outline_black_24dp"
        android:tint="@color/color_accent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_version" />

    <TextView
        android:id="@+id/text_title_report"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:padding="@dimen/dp_8"
        android:text="@string/title_report"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/button_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_mail"
        app:layout_constraintTop_toTopOf="@+id/button_mail" />

    <ImageButton
        android:id="@+id/button_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/bg_circle"
        android:padding="@dimen/dp_8"
        android:src="@drawable/ic_star_border_black_24dp"
        android:tint="@color/color_accent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_mail" />

    <TextView
        android:id="@+id/text_rate_me"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:padding="@dimen/dp_8"
        android:text="@string/title_rate_me"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/button_rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_rate"
        app:layout_constraintTop_toTopOf="@+id/button_rate" />

    <TextView
        android:id="@+id/text_title_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/title_setting"
        android:textAllCaps="true"
        android:textColor="@color/color_transparent_80"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_rate" />

    <ImageButton
        android:id="@+id/button_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/bg_circle"
        android:padding="@dimen/dp_8"
        android:src="@drawable/ic_notifications_black_24dp"
        android:tint="@color/color_accent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_setting" />

    <TextView
        android:id="@+id/text_title_notification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:padding="@dimen/dp_8"
        android:text="@string/title_notification"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/button_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_notification"
        app:layout_constraintTop_toTopOf="@+id/button_notification" />

    <ImageButton
        android:id="@+id/button_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/bg_circle"
        android:padding="@dimen/dp_8"
        android:src="@drawable/ic_language_black_24dp"
        android:tint="@color/color_accent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_notification" />

    <TextView
        android:id="@+id/text_title_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:padding="@dimen/dp_8"
        android:text="@string/title_language"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/button_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_language"
        app:layout_constraintTop_toTopOf="@+id/button_language" />

    <ImageButton
        android:id="@+id/button_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/bg_circle"
        android:padding="@dimen/dp_8"
        android:src="@drawable/ic_view_quilt_black_24dp"
        android:tint="@color/color_accent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_language" />

    <TextView
        android:id="@+id/text_title_theme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:padding="@dimen/dp_8"
        android:text="@string/title_theme"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/button_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_theme"
        app:layout_constraintTop_toTopOf="@+id/button_theme" />
</android.support.constraint.ConstraintLayout>
