<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view_search"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_grey_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:clickable="false"
        android:padding="@dimen/dp_13"
        android:src="@drawable/ic_search_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_search"
        app:layout_constraintStart_toStartOf="@+id/view_search"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:text="@string/hint_search"
        app:layout_constraintBottom_toBottomOf="@+id/view_search"
        app:layout_constraintEnd_toStartOf="@+id/button_search_voice"
        app:layout_constraintStart_toEndOf="@+id/button_search"
        app:layout_constraintTop_toTopOf="@+id/view_search" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/button_search_voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:padding="@dimen/dp_13"
        android:src="@drawable/ic_keyboard_voice_black_transparent_80_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_search"
        app:layout_constraintEnd_toEndOf="@+id/view_search"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/bg_circle"
        android:padding="@dimen/dp_8"
        android:src="@drawable/ic_playlist_add_black_24dp"
        android:tint="@color/color_accent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_search" />

    <TextView
        android:id="@+id/text_number_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:text="@string/text_sample_number"
        android:textColor="@color/color_transparent_80"
        app:layout_constraintBottom_toBottomOf="@+id/text_title_playlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_title_playlist" />

    <TextView
        android:id="@+id/text_title_playlist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:text="@string/title_playlist"
        android:textColor="@color/color_transparent_80"
        app:layout_constraintBottom_toBottomOf="@+id/button_playlist"
        app:layout_constraintEnd_toStartOf="@+id/text_number_playlist"
        app:layout_constraintStart_toEndOf="@+id/button_playlist"
        app:layout_constraintTop_toTopOf="@+id/button_playlist" />

    <ImageButton
        android:id="@+id/button_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/bg_circle"
        android:padding="@dimen/dp_8"
        android:src="@drawable/ic_favorite_border_black_24dp"
        android:tint="@color/color_accent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_playlist" />

    <TextView
        android:id="@+id/text_number_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:text="@string/text_sample_number"
        android:textColor="@color/color_transparent_80"
        app:layout_constraintBottom_toBottomOf="@+id/text_title_favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_title_favorite" />

    <TextView
        android:id="@+id/text_title_favorite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:text="@string/title_favorite"
        android:textColor="@color/color_transparent_80"
        app:layout_constraintBottom_toBottomOf="@+id/button_favorite"
        app:layout_constraintEnd_toStartOf="@+id/text_number_favorite"
        app:layout_constraintStart_toEndOf="@+id/button_favorite"
        app:layout_constraintTop_toTopOf="@+id/button_favorite" />

    <ImageButton
        android:id="@+id/button_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/bg_circle"
        android:padding="@dimen/dp_8"
        android:src="@drawable/ic_vertical_align_bottom_black_24dp"
        android:tint="@color/color_accent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_favorite" />

    <TextView
        android:id="@+id/text_number_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:text="@string/text_sample_number"
        android:textColor="@color/color_transparent_80"
        app:layout_constraintBottom_toBottomOf="@+id/text_title_download"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_title_download"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:text="@string/title_download"
        android:textColor="@color/color_transparent_80"
        app:layout_constraintBottom_toBottomOf="@+id/button_download"
        app:layout_constraintEnd_toStartOf="@+id/text_number_download"
        app:layout_constraintStart_toEndOf="@+id/button_download"
        app:layout_constraintTop_toTopOf="@+id/button_download" />

    <ImageButton
        android:id="@+id/button_folder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/bg_circle"
        android:padding="@dimen/dp_8"
        android:src="@drawable/ic_folder_open_black_24dp"
        android:tint="@color/color_accent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_download" />

    <TextView
        android:id="@+id/text_number_folder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:text="@string/text_sample_number"
        android:textColor="@color/color_transparent_80"
        app:layout_constraintBottom_toBottomOf="@+id/text_title_folder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_title_folder" />

    <TextView
        android:id="@+id/text_title_folder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:text="@string/title_local"
        android:textColor="@color/color_transparent_80"
        app:layout_constraintBottom_toBottomOf="@+id/button_folder"
        app:layout_constraintEnd_toStartOf="@+id/text_number_folder"
        app:layout_constraintStart_toEndOf="@+id/button_folder"
        app:layout_constraintTop_toTopOf="@+id/button_folder" />

</android.support.constraint.ConstraintLayout>
